# cogneelearn

./: .gitignore  README.md  presets_claude_all.ini  pyproject.toml  run-llamaserver-all.sh
src/cogneelearn/: __init__.py  assistant.py  config.py  pipeline.py  ui.py
src/cogneelearn/ingest/: __init__.py  cli.py  docs_loader.py  duckdb_deps.py
